--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "composer/installers": "1.*",
         "johnpbloch/wordpress": "4.6.*",
         "wpackagist-theme/activello": "1.0.2",
-        "wpackagist-plugin/contact-form-7": "4.5",
+        "wpackagist-plugin/contact-form-7": "4.5"
     },
     "extra": {
         "wordpress-install-dir": "public/wp",
